using System.Collections;
using System.Collections.Generic;
using UnityEngine;
public class Tags
{

    public const string PLAYER_VIEW = "PlayerView";
    public const string ZOOM_CAMERA = "FP Camera";
    public const string CROSSHAIR = "Crosshair";
    public const string ARROW = "Arrow";
    public const string SPEAR = "Spear";
    public const string PROJECTILE_TAG = "Projectile";

    public const string MELEE_TAG = "Melee";

    public const string PLAYER_TAG = "Player";
    public const string ENEMY_TAG = "Enemy";

}

public class AnimationTags 
{    
    public const string ZOOM_IN_ANIM = "ZoomIn";
    public const string ZOOM_OUT_ANIM = "ZoomOut";

    public const string SHOOT_TRIGGER = "Attack";
    public const string AIM_PARAMETER = "Aim";

    public const string WALK_PARAMETER = "Walk";
    public const string RUN_PARAMETER = "Run";
    public const string ATTACK_TRIGGER = "Attack";
    public const string DEAD_TRIGGER = "Dead";
}
